# PostRenderPerspectiveAlign

./: .gitignore  README.md  pyproject.toml  render.py  setup.py  warping.py
.github/workflows/: build-release-linux.yml  build-release-win.yml
data/coffee_martini/: 00000.camera.json  00000.depth.npz  00001.camera.json  00001.depth.npz
ppa/: __init__.py  data.py  morph.py  proj.py  prpa.py  warp.py
prpa/: __init__.py  __main__.py  data.py  erosion.py  erosionall.py  occlusion.py  proj.py  prpa.py  query.py  recon.py  warp.py
prpa/kernel/taichi/: __init__.py  common.py  erosion.py  query.py  reproj.py
prpa/kernel/taichi/cuda/: common.cuh  erosion.cu  erosion.h  ext.cpp  query.cu  query.h
testdata/: 00000.camera.json  00000.depth.npz  00001.camera.json  00001.depth.npz  00009.camera.json  00009.depth.npz  00017.camera.json  00017.depth.npz
